clusters/test/jore4-hasura.yaml
# This is a generated file, all modifications will be overwritten!

# Describes the default environment variables, secrets the deployment template and the service for jore4 hasura instance
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jore4-hasura
  namespace: hsl-jore4
spec:
  replicas: 1
  selector:
    matchLabels:
      app: "jore4-hasura"
  template:
    metadata:
      labels:
        app: "jore4-hasura"
    spec:
      restartPolicy: Always
      containers:
        - name: "jore4-hasura-image"
          image: "hsldevcom/jore4-hasura:hsl-main--20221212-fa6217ccb3441bfd72e9ec32f50e3b51892e063d"
          imagePullPolicy: Always
          ports:
          - containerPort: 8080
          envFrom:
            - configMapRef:
                name: "jore4-hasura-env"
          volumeMounts:
            - name: secrets-store-inline
              mountPath: "/mnt/secrets-store"
              readOnly: true
          livenessProbe:
            httpGet:
              path: /healthz
              port: 8080
          readinessProbe:
            httpGet:
              path: /healthz
              port: 8080

      volumes:
        - name: secrets-store-inline
          csi:
            driver: secrets-store.csi.k8s.io
            readOnly: true
            volumeAttributes:
              secretProviderClass: "jore4-hasura-secret-mapping"

---
apiVersion: v1
kind: Service
metadata:
  name: jore4-hasura
  namespace: hsl-jore4
spec:
  type: ClusterIP
  selector:
    app: jore4-hasura
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080

---
apiVersion: secrets-store.csi.x-k8s.io/v1alpha1
kind: SecretProviderClass
metadata:
  name: jore4-hasura-secret-mapping
  namespace: hsl-jore4
spec:
  provider: azure
  parameters:
    useVMManagedIdentity: "true"
    tenantId: "572a41dd-c389-4f0a-b256-aefd1bf149d7"
    keyvaultName: "hsl-jore4-test-vault"
    objects: |
      array:
        - |
          objectName: hsl-jore4-db-auth-username
          objectAlias: db-auth-username
          objectType: secret
        - |
          objectName: hsl-jore4-db-hasura-password
          objectAlias: db-password
          objectType: secret
        - |
          objectName: hsl-jore4-db-hasura-username
          objectAlias: db-username
          objectType: secret
        - |
          objectName: hsl-jore4-db-jore3importer-username
          objectAlias: db-jore3importer-username
          objectType: secret
        - |
          objectName: hsl-jore4-hasura-admin-secret
          objectAlias: hasura-admin-secret
          objectType: secret
        - |
          objectName: hsl-jore4-public-db-hostname
          objectAlias: db-hostname
          objectType: secret
        - |
          objectName: hsl-jore4-public-jore4-database
          objectAlias: db-name
          objectType: secret
        - |
          objectName: hsl-jore4-public-timetables-database
          objectAlias: db-timetables-name
          objectType: secret

---
apiVersion: v1
kind: ConfigMap
metadata:
  name: "jore4-hasura-env"
  namespace: hsl-jore4
data:
  HASURA_GRAPHQL_AUTH_HOOK: "http://jore4-auth:8080/public/v1/hasura/webhook"
  HASURA_GRAPHQL_AUTH_HOOK_MODE: "GET"
  HASURA_GRAPHQL_ENABLE_CONSOLE: "false"
  HASURA_GRAPHQL_ENABLE_TELEMETRY: "false"
  HASURA_GRAPHQL_METADATA_DIR: "/hasura-metadata"
  HASURA_GRAPHQL_MIGRATIONS_DIR: "/hasura-migrations"
  HASURA_GRAPHQL_MIGRATIONS_SERVER_TIMEOUT: "60"
  SECRET_STORE_BASE_PATH: "/mnt/secrets-store"
