clusters/test/jore4-mapmatchingdb.yaml
# This is a generated file, all modifications will be overwritten!

# Describes the default environment variables, secrets the deployment template and the service for the custom jore4 map-matching database
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jore4-mapmatchingdb
  namespace: hsl-jore4
spec:
  replicas: 1
  selector:
    matchLabels:
      app: "jore4-mapmatchingdb"
  template:
    metadata:
      labels:
        app: "jore4-mapmatchingdb"
    spec:
      restartPolicy: Always
      containers:
        - name: "jore4-mapmatchingdb-image"
          image: "hsldevcom/jore4-postgres:mapmatching-main--20221013-3b858241030387b2abd68b5def08d9440c3340d3"
          imagePullPolicy: Always
          ports:
          - containerPort: 5432
          envFrom:
            - configMapRef:
                name: "jore4-mapmatchingdb-env"
          volumeMounts:
            - name: secrets-store-inline
              mountPath: "/mnt/secrets-store"
              readOnly: true
      volumes:
        - name: secrets-store-inline
          csi:
            driver: secrets-store.csi.k8s.io
            readOnly: true
            volumeAttributes:
              secretProviderClass: "jore4-mapmatchingdb-secret-mapping"

---
apiVersion: v1
kind: Service
metadata:
  name: jore4-mapmatchingdb
  namespace: hsl-jore4
spec:
  type: ClusterIP
  selector:
    app: jore4-mapmatchingdb
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432

---
apiVersion: secrets-store.csi.x-k8s.io/v1alpha1
kind: SecretProviderClass
metadata:
  name: jore4-mapmatchingdb-secret-mapping
  namespace: hsl-jore4
spec:
  provider: azure
  parameters:
    useVMManagedIdentity: "true"
    tenantId: "572a41dd-c389-4f0a-b256-aefd1bf149d7"
    keyvaultName: "hsl-jore4-test-vault"
    objects: |
      array:
        - |
          objectName: hsl-jore4-db-mapmatching-password
          objectAlias: postgres-password
          objectType: secret
        - |
          objectName: hsl-jore4-db-mapmatching-username
          objectAlias: postgres-user
          objectType: secret

---
apiVersion: v1
kind: ConfigMap
metadata:
  name: "jore4-mapmatchingdb-env"
  namespace: hsl-jore4
data:
  DIGIROAD_ROUTING_DUMP_VERSION: "2022-06-09"
  POSTGRES_DB: "jore4mapmatching"
  SECRET_STORE_BASE_PATH: "/mnt/secrets-store"
